# CrispEmbed

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  HISTORY.md  LEARNINGS.md  PERFORMANCE.md  PLAN.md  PLAN_glm_ocr_notes.md  README.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.11.1.md  RELEASE_NOTES_v0.11.2.md  RELEASE_NOTES_v0.11.3.md  RELEASE_NOTES_v0.11.4.md  RELEASE_NOTES_v0.11.5.md  bench_compare.cpp  bench_decoder.cpp  benchmark.bat  benchmark.ps1  benchmark.sh  build-android.sh  build-cuda.bat  build-embed-wasm.sh  build-ios.sh  build-macos.sh  build-vulkan.bat  build-wasm.sh  build-windows.bat  rebuild.bat  test_hw_full.cpp  test_math_ocr.cpp
.github/workflows/: build-wasm-embed.yml  build-wasm.yml  build.yml  deploy-hf-space.yml  python-wheels.yml  regression.yml  release.yml
crispembed/: Cargo.toml
crispembed-sys/: Cargo.toml  build.rs
crispembed-sys/src/: lib.rs
crispembed/examples/: encode_tokens_smoke.rs  feature_parity.rs
crispembed/src/: lib.rs
docs/: adair.md  contributing.md  diff-harness-coverage.md  esrgan_sr.md  got-ocr2.md  instructir.md  kie.md  metal-q8_0-mul_mv-slow-m1.md  pan_sr.md  pdf_dpi_profiling.md  pix2struct.md  safmn_sr.md  scunet_denoise.md  text_sr_training_data.md  tps_dewarp.md
examples/: face_search.py
examples/cli/: main.cpp  model_mgr.cpp  model_mgr.h
examples/demo/: bidirlm_cross_modal.py  bidirlm_image_text.py  demo.py  demo.rs
handover-prompts/: core-vlm-refactor.md  deepseek-ocr2-quant.md  face-quant-graph-replay.md  minimonkey.md  pix2struct-optimization.md  ppformulanet-L-ggml-graph.md  ppformulanet-L-handover.md  qari-ocr-parity-fix.md
hf-space/: Dockerfile  README.md  app.py  requirements.txt  start.sh
hf_readmes/: gliner-lfm-GGUF.md  internvl2-1b-crispembed-GGUF.md  lfm2-colbert-GGUF.md  parseq-GGUF.md  smoldocling-GGUF.md
models/: convert-adair-to-gguf.py  convert-bert-to-gguf.py  convert-clip-text-to-gguf.py  convert-dat-to-gguf.py  convert-dbnet-to-gguf.py  convert-decoder-embed-to-gguf.py  convert-deepseek-ocr2-to-gguf.py  convert-esrgan-to-gguf.py  convert-face-to-gguf.py  convert-firered-ocr-to-gguf.py  convert-gliner-lfm-to-gguf.py  convert-glm-ocr-to-gguf.py  convert-got-ocr-to-gguf.py  convert-granite-vision-to-gguf.py  convert-hat-to-gguf.py  convert-hmer-to-gguf.py  convert-instructir-to-gguf.py  convert-internvl2-to-gguf.py  convert-layout-to-gguf.py  convert-lfm2-embed-to-gguf.py  convert-lightonocr-to-gguf.py  convert-lilt-to-gguf.py  convert-nafnet-to-gguf.py  convert-paddleocr-vl-to-gguf.py  convert-pan-to-gguf.py  convert-parseq-to-gguf.py  convert-pix2struct-to-gguf.py  convert-pix2tex-to-gguf.py  convert-posformer-to-gguf.py  convert-ppformulanet-l-to-gguf.py  convert-qwen2vl-to-gguf.py  convert-qwen3vl-to-gguf.py  convert-restormer-to-gguf.py  convert-safmn-to-gguf.py  convert-siglip-to-gguf.py  convert-smoldocling-to-gguf.py  convert-swinir-to-gguf.py  convert-tbsrn-to-gguf.py  convert-tesseract-to-gguf.py  convert-text-sr-to-gguf.py  (+14 more)
python/: pyproject.toml  setup.py
src/: adair.cpp  adair.h  bert_ner.cpp  bert_ner.h  bidirlm_audio.cpp  bidirlm_vision.cpp  bidirlm_vision.h  bttr_ocr.cpp  bttr_ocr.h  cc_detect.cpp  cc_detect.h  classical_preproc.cpp  classical_preproc.h  clip_text_embed.cpp  clip_text_embed.h  cnn_embed.cpp  cnn_embed.h  crispembed.cpp  crispembed.h  crispembed_diff.h  dat_sr.cpp  dat_sr.h  decoder_embed.cpp  decoder_embed.h  decoder_embed_internal.h  deepseek_ocr2.cpp  deepseek_ocr2.h  dewarp.cpp  dewarp.h  esrgan_sr.cpp  esrgan_sr.h  face_align.cpp  face_align.h  fireredpunc.cpp  gliner_ner.cpp  gliner_ner.h  glm_ocr.cpp  glm_ocr.h  got_ocr.cpp  got_ocr.h  (+87 more)
src/core/: bpe.h  mel.cpp  (+4 more)
tests/: bench_head2head.py  bench_rag.py  bench_rerank.py  benchmark.py  benchmark_bidirlm.py  benchmark_server.py  check_registry_licenses.py  check_registry_urls.py  debug_model.py  feature_parity.py  parity_layers_bert.py  test_adair_diff.cpp  test_all_models.py  test_all_parity.py  test_bert_ner.cpp  test_bgem3.py  test_bidirlm_audio.py  test_bidirlm_image_text.py  test_bidirlm_image_text_lite.py  test_bidirlm_text.py  test_bidirlm_vision.py  test_bttr_beam.cpp  test_cc_detect.cpp  test_cli_parity.py  test_clip_parity.py  test_confidence.cpp  test_conv_ext.cpp  test_core_cpu_ops.cpp  test_core_vlm_attention.cpp  test_dat_diff.cpp  test_decoder_batch.py  test_dewarp.cpp  test_esrgan_diff.cpp  test_face_python.py  test_gguf_loader_mmap.cpp  test_gliner_diff.cpp  test_gliner_ner.cpp  test_glm_ocr_diff.cpp  test_glm_ocr_e2e.cpp  test_glm_ocr_image.cpp  (+62 more)
tmp/: doc-150dpi-pan4x.ppm  doc-75dpi-cleaned.ppm  doc-75dpi-pan4x-cleaned.ppm  dump_tess_internals  dump_tess_internals.cpp  dump_tess_logits  dump_tess_logits.cpp  lilt_test.json  line-75dpi-clean.ppm  line-75dpi-pan-clean.ppm  line-75dpi-pan4x.ppm  nafnet_ref_input_u8.rgb  nafnet_ref_output.f32  nafnet_ref_output_u8.rgb  pan-stderr.txt  text-75dpi-pan4x.ppm  upload_hf_readmes.py
tools/: audit_diff_coverage.py  bench_unlimited_ocr.sh  benchmark_all_engines.py  benchmark_all_engines.results.md  cleanup_probe.cpp  dump_adair_reference.py  dump_adair_reference_from_gguf.py  dump_all_layers_diff.py  dump_dat_reference.py  dump_dat_reference_from_gguf.py  dump_dbnet_reference.py  dump_deepseek_ocr2_reference.py  dump_esrgan_reference.py  dump_gliner_reference.py  dump_glm_ocr_reference.py  dump_granite_llm_reference.py  dump_hat_reference.py  dump_hat_reference_from_gguf.py  dump_instructir_reference.py  dump_instructir_reference_from_gguf.py  dump_internvl2_reference.py  dump_layout_reference.py  dump_lfm2_colbert_reference.py  dump_lfm2_reference.py  dump_lightonocr_reference.py  dump_lilt_reference.py  dump_math_ocr_reference.py  dump_paddleocr_vl_reference.py  dump_pan_reference.py  dump_pan_reference_from_gguf.py  dump_parseq_reference.py  dump_pix2struct_reference.py  dump_ppformulanet_l_reference.py  dump_qwen2vl_reference.py  dump_qwen3vl_reference.py  dump_reference.py  dump_refpoints_per_layer.py  dump_restormer_reference.py  dump_safmn_reference.py  dump_scunet_reference_from_gguf.py  (+13 more)
wasm/: ocr_wrapper.c
(+52 files in other folders)
